[tool.poetry]
name = "crispy-chainsaw"
version = "0.1.0"
description = ""
authors = ["Syber.Nomad <10252496+sybernomad@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "crispy_chainsaw"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 120
force_alphabetical_sort = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
